<resources>
    <string name="app_name">Имена Аллаха</string>
    <string name="action_content">Основной материал</string>
    <string name="action_main_content">Толкование имён</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--    Main-->
    <string name="action_night_mode">Ночной режим</string>
    <string name="action_settings">Настройки</string>
    <string name="action_chapter_list">Список глав</string>
    <string name="action_bookmark_list">Избранные главы</string>
    <string name="action_search_by_chapters">Поиск по главам…</string>
    <string name="action_bookmarks_empty">Избранных глав нет</string>
    <string name="action_copied_to_clipboard">Скопировано в буфер</string>
    <string name="action_added_to_bookmark">Добавлено в избранное</string>
    <string name="action_removed_from_bookmark">Удалено из избранного</string>
    <string name="action_main_names_text_size">Размер текста имён</string>
    <string name="action_main_ayahs_text_size">Размер текста аятов</string>
    <string name="action_main_content_text_size">Размер текста главы</string>
    <string name="action_show_main_names_state">Отображение имён</string>
    <string name="action_name_in_arabic">На арабском</string>
    <string name="action_name_in_transcription">Транскрипция</string>
    <string name="action_name_in_translation">На русском</string>
    <string name="action_input_categories">Выберите категорию ввода…</string>
    <string name="action_quiz_categories">Выберите категорию викторины…</string>
    <string name="action_arabic">Арабский</string>
    <string name="action_russian">Русский</string>
    <string name="action_input_type">Режим ввода</string>
    <string name="action_input_name">Введите имя перевод…</string>
    <string name="action_add_text">Введите текст…</string>
    <string name="action_false">Правильно!</string>
    <string name="action_true">Вы ошиблись!</string>
    <string name="action_new_refresh">Начать заново</string>
    <string name="action_share_input_result">Поделиться результатом</string>
    <string name="action_about_us">О нас</string>
    <string name="action_donate_project">Поддержать проект</string>
    <string name="action_refresh">Обнулено</string>

    <!--    Settings-->
    <string name="description_text_size">Размер текста</string>

    <!--    Navigation items-->
    <string name="nav_title_content">Основной материал</string>
    <string name="nav_title_main">Толкование имён</string>
    <string name="nav_title_card">Карточки</string>
    <string name="nav_title_all_names">Список имён</string>
    <string name="nav_title_input">Ввод имён (бета)</string>
    <string name="nav_title_quiz">Викторина (бета)</string>
    <string name="nav_title_additionally">Дополнительно</string>
    <string name="nav_title_download_audio">Скачать все аудио</string>
    <string name="nav_title_donate">Поддержать проект</string>
    <string name="nav_title_about_us">О нас</string>
    <string name="nav_title_rate">Оценить</string>
    <string name="nav_title_share">Поделиться</string>

    <string name="action_about_us_text">
        <b>JMApps</b> - серия бесплатных и безрекламных андроид-приложений для мусульман.\n\n

        Вы можете следить за обновлением старых и изданием новых приложений в наших соцсетях:\n\n

        ВКонтакте: www.vk.com/JMApps\n
        Telegram: t.me/JMApps\n
        Facebook: www.facebook.com/JMAppsM\n
        Instagram: www.instagram.com/dev_muslim\n\n

        По всем вопросам, предложениям и скритикой можете писать нам на почту:
        JMAppsMuslim@gmail.com или в Telegram: t.me/dev_muslim
    </string>

    <string name="action_donate_text">
        Теперь вы можете поддержать наш проект материально.\n\n

        За реквизитами пишите нам на почту:
        JMAppsMuslim@gmail.com или в Telegram: t.me/dev_muslim
    </string>
    <string name="action_quiz">Викторина</string>
</resources>